@@ -1761,6 +1761,13 @@ STDMETHODIMP HitTarget::put_OverwritePhysics(VARIANT_BOOL newVal)
       return S_OK;
 }
 
+STDMETHODIMP HitTarget::get_HitThreshold(float *pVal)
+{
+   *pVal = m_d.m_currentHitThreshold;
+
+   return S_OK;
+}
+
 void HitTarget::GetTimers(vector<HitTimer*> &pvht)
 {
     IEditable::BeginPlay();
